Remember to pass --enable-preview to tests